--- a/BookDoctor.Web/BookDoctor.Web.csproj
+++ b/BookDoctor.Web/BookDoctor.Web.csproj
@@ -18,4 +18,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookDoctor.Data\BookDoctor.Data.csproj" />
+  </ItemGroup>
+
 </Project>
