--- a/BookDoctor.Web/appsettings.json
+++ b/BookDoctor.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLExpress;Database=LearningSystemDb;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLExpress;Database=BookDoctorDb;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
