Added AdminArea, DoctorArea, PatientArea, Services Layer

--- a/BookDoctor.Web/BookDoctor.Web.csproj
+++ b/BookDoctor.Web/BookDoctor.Web.csproj
@@ -7,9 +7,10 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" PrivateAssets="All" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,7 +20,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BookDoctor.Common\BookDoctor.Common.csproj" />
     <ProjectReference Include="..\BookDoctor.Data\BookDoctor.Data.csproj" />
+    <ProjectReference Include="..\BookDoctor.Services\BookDoctor.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Doctors\Data\" />
+    <Folder Include="Areas\Patients\Data\" />
   </ItemGroup>
 
 </Project>
